# llm-on-device

./: .gitignore  README.md  pyproject.toml
demo/: qwen3-demo.py
scripts/: download.sh
