[project]
name = "llm-on-device"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = []

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
